Probably-easy TODO list:
	Update the manual.
	Revert Sticky Flame nerf
	Make Sorcery appear above the elemental schools in skills menu, maybe next to Enchantments.
	"That beam is likely to hit you" for Fire Storm and Ice Storm, LRD, Major Destruction
	Casting LRD at a pandemonium vault wall resulted in 
		"[string "global_prelude"]:64: attempt to index local 'vault' (a nil value)"


Harder TODO list:
	Put a HP-indicator face next to the player's large HP bar, to make the new system more intuitive
	Need better intro images!
	Locate the section of code sending a background color control sequence, make it optional.
		This because Gnome terminal is a dumb.


Long-term TODO list:
	Add [a]bilities and success rates to the morgue file.
	Merge Traps & Doors with Stealth, making Thievery
	Redo scoring system to induce experts to play hyperagressively
	Phase out paralysis in favor of a suite of new status effects
	Restore square spell ranges (This actually looks really hard)
	Reduce game length by 1/3 outside of extended endgame
		There are subtle balance issues involved!
	Fix the Shoals.
	Make Invisibility more viable late-game/extended
		Reduce some See Invisible enemies to merely Sense Invisible, or no
		invisibility detection at all
	Overhaul some gods.
	Switch to an automatic build system, like autotools, cmake, something like that.
		Hopefully, this will resolve OS X compatibility.


Changes already made:
	Monsters may no longer invoke Zot traps against the player.
	Charms, Hexes, and Poison Magic reshuffled into Enchantments and Sorcery.  Some books consequently changed; miscast effects tweaked.
		Aptitude changes:
			High Elf:
				-2 Poison Magic to 1 Sorcery (Yes, I know this is a buff.)
			Halfling:
				0 Enchantments to -1; -1 Poison Magic to 0 Sorcery.
			Centaur:
				-2 Poison Magic to -1 Sorcery
			Spriggan:
				0 Poison Magic to +2 Sorcery
			Vampire:
				1 Enchantments to 0; -1 Poison Magic to 1 Sorcery.
	Haste and Slow nerf reverted.