@@ -2,7 +2,7 @@ Probably-easy TODO list:
 	Update the manual.
 	Revert Sticky Flame nerf
 	Make Sorcery appear above the elemental schools in skills menu, maybe next to Enchantments.
-	"That beam is likely to hit you" for Fire Storm and Ice Storm, LRD, Major Destruction
+	"That beam is likely to hit you" for Ice Storm, LRD, Major Destruction
 	Casting LRD at a pandemonium vault wall resulted in 
 		"[string "global_prelude"]:64: attempt to index local 'vault' (a nil value)"
 
@@ -83,3 +83,4 @@ Changes already made:
 	Shoals removed, pending fixing of tiles version, gameplay tweaking.
 	Special-case message for slicing door mimics
 	Toned down the vampire mosquito Swamp entrance vault
+	Tracer implemented for Fire Storm
